@@ -91,6 +91,8 @@ Changes for v2.04
 -- Private build 27
 - Update link in Help menu to the file of patches etc. for disabling Enhanced Power Management, as the file has had to be re-posted (Graham)
 - Correct the handling by CommHID of USB PIDs that have leading zeroes (Graham)
+- Modify testing of Enhanced Power Management to support XSight Lite/Plus and similar remotes (Graham)
+- If GetInfoAndSig fails for XSight Lite/Plus style of remote, take E2 address and size from RDF (Graham)
 
 Changes for v2.03
 -- Alpha 8 --
